--- a/ex02-simpleScript/pom.xml
+++ b/ex02-simpleScript/pom.xml
@@ -7,9 +7,29 @@
     <groupId>org.example</groupId>
     <artifactId>ex02-simpleScript</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
-<!--    Add this to the maven file if it gives a compiler not supported warning
-///////////////////////////////////////////////////////////////////////////////-->
+    <!--    Add this to the maven file if it gives a compiler not supported warning
+    ///////////////////////////////////////////////////////////////////////////////-->
     <packaging>jar</packaging>
 
     <properties>
